--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "icare-client",
+  "name": "icare-mini",
   "productName": "iCare",
   "description": "iCare",
   "version": "1.0.0",
-  "repository": "https://github.com/jalenng/2021-spring-cs160-team-paladins",
-  "url": "https://jalenng.github.io/2021-spring-cs160-team-paladins",
+  "repository": "https://github.com/jalenng/icare-mini",
+  "url": "https://github.com/jalenng/icare-mini#readme",
   "author": {
-    "name": "Team Paladins",
+    "name": "Jay",
     "email": "null@null.com"
   },
   "private": true,
   "build": {
-    "appId": "team_paladins.icare",
+    "appId": "jay.icare",
     "publish": {
       "provider": "github"
     },
@@ -37,8 +37,6 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.8.0",
-    "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
     "electron-is-dev": "^2.0.0",
     "electron-store": "^7.0.2",
     "electron-window-state": "^5.0.3",
@@ -46,7 +44,6 @@
     "node-powershell": "^4.0.0",
     "npm": "^7.8.0",
     "react": "^17.0.2",
-    "react-chartjs-2": "^2.11.1",
     "react-circle": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
