--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twenty",
   "productName": "Twenty",
-  "description": "A customizable timer that reminds you to take breaks.",
+  "description": "A customizable timer that reminds you to take breaks in preventing eye strain",
   "version": "1.0.0",
   "repository": "https://github.com/jalenng/twenty",
   "url": "https://github.com/jalenng/twenty#readme",
