--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cross-env": "^7.0.3",
     "electron": "^13.0.1",
     "electron-builder": "^22.10.5",
+    "electron-devtools-installer": "^3.2.0",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "react-scripts": "^4.0.3",
