Fix capitalization of renamed system files

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@fluentui/react": "^8.8.0",
     "electron-is-dev": "^2.0.0",
     "electron-store": "^7.0.2",
+    "electron-unhandled": "^3.0.2",
     "electron-window-state": "^5.0.3",
     "hazardous": "^0.3.0",
     "node-powershell": "^4.0.0",
