Add blocker tooltip

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twenty",
   "productName": "Twenty",
-  "description": "A customizable timer that reminds you to take breaks in preventing eye strain",
+  "description": "Customizable timer that reminds you to take eye breaks",
   "version": "0.1.5",
   "repository": "https://github.com/jalenng/twenty",
   "url": "https://github.com/jalenng/twenty#readme",
