--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "build": "npm run react-build && npm run electron-build",
     "dev": "concurrently \"npm:react-start\" \"npm:electron-watch\"",
     "test": "concurrently -s first -k \"npm:react-start\" \"npm:electron-test\"",
-    "lint": "standard"
+    "lint": "standard --fix"
   },
   "browserslist": {
     "production": [
