--- a/package.json
+++ b/package.json
@@ -30,10 +30,7 @@
       "trayAssets/**/*"
     ],
     "win": {
-      "target": "nsis",
-      "certificateFile": "private/jalenng.pfx",
-      "certificatePassword": "",
-      "publisherName": "jalenng"
+      "target": "nsis"
     },
     "mac": {
       "category": "public.app-category.healthcare-fitness"
