Remove certificate-related props from package.json and workflow file

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
       "trayAssets/**/*"
     ],
     "win": {
-      "target": "nsis",
-      "publisherName": "jalenng"
+      "target": "nsis"
     },
     "mac": {
       "category": "public.app-category.healthcare-fitness"
