--- a/package.json
+++ b/package.json
@@ -42,29 +42,25 @@
   "dependencies": {
     "@fluentui/react": "^8.8.0",
     "electron-is-dev": "^2.0.0",
-    "electron-store": "^7.0.2",
+    "electron-store": "^8.1.0",
     "electron-window-state": "^5.0.3",
     "hazardous": "^0.3.0",
     "node-powershell": "^4.0.0",
-    "npm": "^7.8.0",
-    "react": "^17.0.2",
+    "npm": "^8.15.1",
+    "react": "^18.2.0",
     "react-circle": "^1.1.1",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "sound-play": "^1.1.0"
   },
   "devDependencies": {
-    "concurrently": "^6.0.0",
+    "concurrently": "^7.3.0",
     "cross-env": "^7.0.3",
-    "electron": "^13.0.1",
-    "electron-builder": "^22.10.5",
-    "mocha": "^8.3.2",
-    "nodemon": "^2.0.7",
-    "react-scripts": "^4.0.3",
-    "spectron": "^14.0.0",
-    "standard": "^16.0.3",
-    "supertest": "^6.1.3",
-    "wait-on": "^5.3.0"
+    "electron": "^20.0.0",
+    "electron-builder": "^23.3.3",
+    "nodemon": "^2.0.19",
+    "standard": "^17.0.0"
   },
   "main": "./public/electron.js",
   "homepage": "./",
@@ -75,7 +71,7 @@
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
     "electron-start": "electron .",
-    "electron-watch": "wait-on tcp:3000 && nodemon --exec npm run electron-start",
+    "electron-watch": "nodemon --exec npm run electron-start",
     "electron-test": "cross-env NODE_ENV=test mocha",
     "build": "npm run react-build && npm run electron-build",
     "dev": "concurrently \"npm:react-start\" \"npm:electron-watch\"",
