--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "twenty",
   "productName": "Twenty",
   "description": "Customizable timer that reminds you to take eye breaks",
-  "version": "0.1.11",
+  "version": "0.2.1",
   "repository": "https://github.com/jalenng/twenty",
   "url": "https://github.com/jalenng/twenty#readme",
   "author": {
@@ -51,13 +51,15 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "sound-play": "^1.1.0"
+    "sound-play": "^1.1.0",
+    "win32-api": "^19.8.1"
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
     "cross-env": "^7.0.3",
     "electron": "^20.0.0",
     "electron-builder": "^23.3.3",
+    "node-gyp": "^9.1.0",
     "nodemon": "^2.0.19",
     "standard": "^17.0.0"
   },
